# lnksmith

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit-update.yml  release.yml
docs/: redteam.md
scripts/: validate-windows.ps1
src/lnksmith/: __init__.py  __main__.py  _constants.py  _types.py  _util.py  builder.py  cli.py  parser.py
tests/: conftest.py  test_builder.py  test_cli.py  test_parser.py  test_roundtrip.py
